<resources>
    <string name="app_name">OnlineStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title">Welcome to <font color="#39c7a5">Digital Store</font>\n
        a <font color="#39c7a5"> Gateway </font> to the Latest Tech</string>
    <string name="intro_sub_title">Sign in to explore a wide range of cutting-edge\n digital products.
        Don`t have an account yet?\n
        Register now and enjoy a seamless\nand secure shopping experience</string>
    <string name="lets_s_get_started">Lets\'s Get Started</string>
    <string name="signing">Already have an account? <font color="#39c7a5"> Sign In</font> </string>
    <string name="or_register_in_app">or <font color="#39c7a5">Register</font> in App</string>
    <string name="recomendation">Recomendation</string>
    <string name="mainFragmentWelcomeText">Welcome Back</string>
    <string name="mainFragmentUserName">Tom</string>
    <string name="see_all">See all</string>
    <string name="explorer">Explorer</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="fee_delivery">Fee delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="pay_cash_when_the_medicines_at_the_destination">Pay Cash When the medicines\n
        at the destination</string>
    <string name="login_to_your_online_account_and_make_payment">Login to your online account and make payment</string>
    <string name="mainFragmentCategoriesText">Categories</string>

    <!-- Login Fragment strings -->
    <string name="login_fragment_email_field_hint">Email</string>
    <string name="login_fragment_password_field_hint">Password</string>
    <string name="login_fragment_recover_text_link">Забыли пароль?</string>
    <string name="login_fragment_login_button_text">Войти</string>
    <string name="login_fragment_no_account_text">Нет аккаунта?</string>
    <string name="login_fragment_registration_link_text">Зарегистрироваться?</string>

    <!-- Recover Password Fragment strings -->
    <string name="recover_fragment_subtitle_text">Введите адрес электронной почты, чтобы получить инструкции по восстановлению пароля</string>
    <string name="recover_fragment_title_text">Забыл(a) пароль</string>
    <string name="recover_fragment_send_button_text">Отправить</string>
    <string name="recover_fragment_email_field_hint">Введите email</string>

    <!-- Registration Fragment strings -->
    <string name="registration_fragment_email_edit_text_hint">Email</string>
    <string name="registration_fragment_password_edit_text_hint">Password</string>
    <string name="registration_fragment_confirm_password_edit_text_hint">Confirm password</string>
    <string name="registration_fragment_sign_in_button_name_text">Sign In</string>
    <string name="registration_fragment_text_already_have_an_account_login">Already have an account? Login</string>


</resources>